Fixed overlay z-index

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -51,7 +51,7 @@
       width: 100%;
       background-color: #1D1C1E;
       padding: 2em 1em;
-      z-index: 500;
+      z-index: 1050;
       gap: 1.4rem;
       .nav_link {
         color: #ffff;
