--- a/src/styles/About.module.scss
+++ b/src/styles/About.module.scss
@@ -164,7 +164,7 @@
       top: 20%;
       left: 0;
       background-color: rgba(0, 0, 0, 0.608);
-      z-index: 500;
+      z-index: 1050;
     }
   }
 }
